--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -229,7 +229,7 @@ workflows:
     jobs:
       - test-backend
       - scan-backend
-      - build-and-push-image:
+      - build-image:
           requires: [test-backend, scan-backend]
       - deploy-infrastructure:
           requires: [build-image]
