--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -12,6 +12,6 @@
     "rules": {
         "no-console": "off",
         "quotes": [2, "single", { "avoidEscape": true }],
-        "linebreak-style": ["error", "windows"]
+        "linebreak-style": 0
     }
 }
