--- a/.circleci/ansible/save-elb-dns.yml
+++ b/.circleci/ansible/save-elb-dns.yml
@@ -7,6 +7,8 @@
   vars:
     ENV_NAME: "{{ lookup('env', 'ENV_NAME') }}"
   tasks:
+    - name: Get services
+      shell: "./bin/kubectl get svc"
     - name: Get the LoadBalancer's DNS name
       shell: "./bin/kubectl get svc {{ ENV_NAME }}"
       register: elb_dns
