--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,19 @@ jobs:
     docker:
       - image: cimg/node:18.16.0
     steps:
-      - checkout     
+      - checkout
+      - restore_cache:
+          keys: [backend-test]      
       - run:
           name: Backend test
           command: |
             cd backend
             npm install
             npm run test
-
+      - save_cache:
+          paths: [backend/node_modules]
+          key: backend-build
+          
   scan-backend:
     docker:
       - image: cimg/node:18.16.0
